appId: ${APP_ID}
---
# Purpose: Test the creation and deletion of a DM room.
- tapOn: "Create a new conversation or room"
- tapOn: "Search for someone"
- inputText: ${INVITEE1_MXID}
- tapOn:
    text: ${INVITEE1_MXID}
    index: 1
- takeScreenshot: build/maestro/330-createAndDeleteDM
# Flakyness: at this point very often the room is named "Empty room" so the flow fails.
- tapOn:
    text: "1"
    index: 1
# Here we need to close the keyboard. Weird. Perhaps we should close it automatically when leaving the timeline.
- tapOn:
    id: "android:id/input_method_nav_back"
- tapOn: "Leave room"
- tapOn: "Leave"
