appId: ${APP_ID}
---
# Purpose: Test the creation and deletion of a room
- tapOn: "Create a new conversation or room"
- tapOn: "Create a room"
- tapOn: "Search for someone"
- inputText: ${INVITEE1_MXID}
- tapOn:
    text: ${INVITEE1_MXID}
    index: 1
- tapOn: "Next"
- tapOn: "e.g. Product Sprint"
- inputText: "aRoomName"
- tapOn: "What is this room about?"
- inputText: "aRoomTopic"
- tapOn: "Create"
- takeScreenshot: build/maestro/320-createAndDeleteRoom
# Flakyness: at this point very often the room is named "Empty room" so the flow fails.
- tapOn: "aRoomName"
- tapOn: "People"
# assert there's 1 memeber and 1 invitee
- tapOn: "Search for someone"
- inputText: ${INVITEE2_MXID}
- tapOn:
    text: ${INVITEE2_MXID}
    index: 1
- tapOn: "Send"
- tapOn: "Back"
- tapOn: "aRoomName"
- tapOn: "People"
# assert there's 1 memeber and 2 invitees
- tapOn: "Back"
- tapOn: "Leave room"
- tapOn: "Leave"
